--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: tar zcf hy_torrentleech.dlm INFO search.php
-    - name: GH Release
+    - name: Release
       uses: softprops/action-gh-release@v0.1.5
       if: startsWith(github.ref, 'refs/tags/')
+      with:
+          files: hy_torrentleech.dlm
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
